initial models for app

--- a/XShare/Data/XShare.Data.Models/XShare.Data.Models.csproj
+++ b/XShare/Data/XShare.Data.Models/XShare.Data.Models.csproj
@@ -57,12 +57,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accident.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="CarTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rating.cs" />
+    <Compile Include="Reservation.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\XShare.Common\XShare.Common.csproj">
+      <Project>{5cec316c-12c7-4e83-9bdc-69a54a32fd4e}</Project>
+      <Name>XShare.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
