Home screen fixed

--- a/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
+++ b/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
@@ -398,6 +398,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Cars\" />
+    <Folder Include="Reservations\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Common\XShare.Common\XShare.Common.csproj">
