--- a/XShare/Common/XShare.Common/XShare.Common.csproj
+++ b/XShare/Common/XShare.Common/XShare.Common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\Assemblies.cs" />
     <Compile Include="Constants\ModelConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
