--- a/XShare/Services/XShare.Services.Data/XShare.Services.Data.csproj
+++ b/XShare/Services/XShare.Services.Data/XShare.Services.Data.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CarService.cs" />
+    <Compile Include="Contracts\ICarService.cs" />
     <Compile Include="Contracts\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserService.cs" />
