--- a/XShare/Services/XShare.Services.Data/XShare.Services.Data.csproj
+++ b/XShare/Services/XShare.Services.Data/XShare.Services.Data.csproj
@@ -60,7 +60,9 @@
     <Compile Include="CarService.cs" />
     <Compile Include="Contracts\ICarService.cs" />
     <Compile Include="Contracts\IUserService.cs" />
+    <Compile Include="Contracts\IReservationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReservationService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
