--- a/XShare/Web/XShare.WebForms/Web.config
+++ b/XShare/Web/XShare.WebForms/Web.config
@@ -17,6 +17,7 @@
     <!-- Turn on Custom Errors -->
     <customErrors mode="On" defaultRedirect="DefaultRedirectErrorPage.aspx" redirectMode="ResponseRewrite">
       <error statusCode="404" redirect="/Errors/404.aspx"/>
+      <error statusCode="500" redirect="/Errors/500.aspx"/>
     </customErrors>
     <httpRuntime targetFramework="4.5.2" />
     <pages>
@@ -68,6 +69,8 @@
     <httpErrors errorMode="Custom" existingResponse="Replace">
       <remove statusCode="404" subStatusCode="-1" />
        <error statusCode="404" path="/Erorrs/404.aspx" responseMode="ExecuteURL" />
+      <remove statusCode="500" subStatusCode="-1" />
+      <error statusCode="500" path="/Erorrs/500.aspx" responseMode="ExecuteURL" />
     </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
