--- a/XShare/Common/XShare.Common/XShare.Common.csproj
+++ b/XShare/Common/XShare.Common/XShare.Common.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Constants\Assemblies.cs" />
     <Compile Include="Constants\ModelConstants.cs" />
+    <Compile Include="Extensions\LinqExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
