cashing statistics data is OK

--- a/XShare/Web/XShare.WebForms/Web.config
+++ b/XShare/Web/XShare.WebForms/Web.config
@@ -29,6 +29,13 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
+    <caching>
+      <outputCacheSettings>
+        <outputCacheProfiles>
+          <add name="ShortLived" duration="600" varyByParam="*" location="Server" />
+        </outputCacheProfiles>
+      </outputCacheSettings>
+    </caching>
     <membership>
       <providers>
         <!--
