--- a/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
+++ b/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
@@ -195,6 +195,7 @@
     <Content Include="Cars\Add.aspx" />
     <Content Include="Cars\All.aspx" />
     <Content Include="Cars\CarDetails.aspx" />
+    <Content Include="Community\All.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\Assets\Images\x-sign.png" />
     <Content Include="Content\bootstrap.css" />
@@ -416,6 +417,13 @@
     </Compile>
     <Compile Include="Cars\CarDetails.aspx.designer.cs">
       <DependentUpon>CarDetails.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Community\All.aspx.cs">
+      <DependentUpon>All.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Community\All.aspx.designer.cs">
+      <DependentUpon>All.aspx</DependentUpon>
     </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
