escaping html is added

--- a/XShare/Web/XShare.WebForms/Web.config
+++ b/XShare/Web/XShare.WebForms/Web.config
@@ -20,7 +20,7 @@
       <error statusCode="500" redirect="/Errors/500.aspx"/>
     </customErrors>
     <httpRuntime targetFramework="4.5.2" />
-    <pages>
+    <pages validateRequest="false">
       <namespaces>
         <add namespace="System.Web.Optimization" />
         <add namespace="Microsoft.AspNet.Identity" />
