--- a/XShare/Services/XShare.Services.Data/XShare.Services.Data.csproj
+++ b/XShare/Services/XShare.Services.Data/XShare.Services.Data.csproj
@@ -61,8 +61,10 @@
     <Compile Include="CarService.cs" />
     <Compile Include="Contracts\IAccidentService.cs" />
     <Compile Include="Contracts\ICarService.cs" />
+    <Compile Include="Contracts\IFeaturesService.cs" />
     <Compile Include="Contracts\IUserService.cs" />
     <Compile Include="Contracts\IReservationService.cs" />
+    <Compile Include="FeaturesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReservationService.cs" />
     <Compile Include="UserService.cs" />
