--- a/XShare/Web/XShare.WebForms/Web.config
+++ b/XShare/Web/XShare.WebForms/Web.config
@@ -52,14 +52,16 @@
         <clear />
       </providers>
     </profile>
-    <roleManager>
-      <!--
+    <!--<roleManager>
+      -->
+    <!--
 	        ASP.NET Membership Role is disabled in this template. Please visit the following link http://go.microsoft.com/fwlink/?LinkId=301889 to learn about the ASP.NET Membership support in this template
         -->
+    <!--
       <providers>
         <clear />
       </providers>
-    </roleManager>
+    </roleManager>-->
     <!--
             If you are deploying to a cloud environment that has multiple web server instances,
             you should change session state mode from "InProc" to "Custom". In addition,
