--- a/XShare/Web/XShare.WebForms/Web.config
+++ b/XShare/Web/XShare.WebForms/Web.config
@@ -17,6 +17,7 @@
     <!-- Turn on Custom Errors -->
     <customErrors mode="On" defaultRedirect="DefaultRedirectErrorPage.aspx" redirectMode="ResponseRewrite">
       <error statusCode="404" redirect="/Errors/404.aspx" />
+      <error statusCode="401" redirect="/Errors/401.aspx" />
       <error statusCode="500" redirect="/Errors/500.aspx" />
     </customErrors>
     <httpRuntime targetFramework="4.5.2" />
@@ -102,10 +103,20 @@
       </authorization>
     </system.web>
   </location>
+  <location path="Admin">
+    <system.web>
+      <authorization>
+        <allow roles="admin" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <system.webServer>
     <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="401" subStatusCode="-1" />
+      <error statusCode="401" path="/Erorrs/401.aspx" responseMode="ExecuteURL" />
       <remove statusCode="404" subStatusCode="-1" />
-       <error statusCode="404" path="/Erorrs/404.aspx" responseMode="ExecuteURL" />
+      <error statusCode="404" path="/Erorrs/404.aspx" responseMode="ExecuteURL" />
       <remove statusCode="500" subStatusCode="-1" />
       <error statusCode="500" path="/Erorrs/500.aspx" responseMode="ExecuteURL" />
     </httpErrors>
