initial ugly version

--- a/XShare/Web/XShare.WebForms/Web.config
+++ b/XShare/Web/XShare.WebForms/Web.config
@@ -12,6 +12,11 @@
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=XSahre;Integrated Security=True; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <siteMap>
+      <providers>
+        <remove name="MySqlSiteMapProvider" />
+      </providers>
+    </siteMap>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <!-- Turn on Custom Errors -->
