--- a/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
+++ b/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
@@ -272,6 +272,7 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="Web.sitemap" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accident\Details.aspx.cs">
