--- a/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
+++ b/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
@@ -212,6 +212,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Controls\Notificator\Notificator.ascx" />
     <Content Include="Controls\Notificator\Scripts\Notificator.js" />
+    <Content Include="Controls\Notificator\Styles\Notificator.css" />
     <Content Include="Controls\YoutubeIfreme\YouTubeIframe.ascx" />
     <Content Include="Errors\401.aspx" />
     <Content Include="Errors\500.aspx" />
@@ -231,6 +232,7 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\Notificator.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\WebForms\DetailsView.js" />
@@ -592,8 +594,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controls\Notificator\Images\" />
-    <Folder Include="Controls\Notificator\Styles\" />
     <Folder Include="Uploaded_Files\" />
   </ItemGroup>
   <ItemGroup>
