Manage users works flawlessly; Changing emails and pHone number; Changing admin role; Sorting by id, username, email, phone number; Filtering username, id, phone number and emal; Todo: filtering by role.

--- a/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
+++ b/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
@@ -517,6 +517,7 @@
     <Compile Include="Controls\YoutubeIfreme\YouTubeIframe.ascx.designer.cs">
       <DependentUpon>YouTubeIframe.ascx</DependentUpon>
     </Compile>
+    <Compile Include="DataTransferModels\UserAdminPanelModel.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
