--- a/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
+++ b/XShare/Web/XShare.WebForms/XShare.WebForms.csproj
@@ -210,6 +210,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Controls\Confirmator\Confirmator.ascx" />
     <Content Include="Controls\Confirmator\Scripts\Confirmator.js" />
+    <Content Include="Controls\Confirmator\Scripts\jquery.validate.min.js" />
     <Content Include="Controls\Confirmator\Styles\Confirmator.css" />
     <Content Include="Controls\Notificator\Notificator.ascx" />
     <Content Include="Controls\Notificator\Scripts\Notificator.js" />
